correct image snipper

--- a/snippets/image.liquid
+++ b/snippets/image.liquid
@@ -38,11 +38,8 @@
 <style>
   #Image-{{ image.id }}-{{ responsive_image_counter }} {
     aspect-ratio: {{ image.aspect_ratio }};
-    max-width: {{ max_width_image }}px;
-    max-height: {{ max_height_image }}px;
     width: 100%;
-    height: auto;
-    object-fit: contain;
+    height: 100%;
   }
 </style>
 
