--- a/dev/src/section-slider-pin-points.scss
+++ b/dev/src/section-slider-pin-points.scss
@@ -1,3 +1,186 @@
 .s-slider-pin-points {
+  max-width: 1440px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  @media screen and (min-width: 768px) {
+    gap: 60px;
+  }
 
+  &__title {
+    width: 100%;
+    padding: 0 10px;
+    margin: 0;
+    font-family: var(--font-america);
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 90%;
+    letter-spacing: -0.01em;
+    text-align: center;
+    @media screen and (min-width: 768px) {
+      padding: 0;
+    }
+  }
+
+  &__inner-container {
+    display: grid;
+    grid-template-columns: 1fr;
+    @media screen and (min-width: 768px) {
+      position: relative;
+
+      grid-template-columns: 1fr 1fr;
+      gap: 10px;
+    }
+  }
+
+  &__slider {
+    display: grid;
+    grid-area: slider;
+    height: 375px;
+    @media screen and (min-width: 767px) {
+      position: relative;
+      min-height: 635px;
+      height: 100%;
+    }
+  }
+
+  &__slider-btns {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 100%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    z-index: 9;
+    justify-content: space-between;
+    align-items: center;
+    pointer-events: none;
+
+    &--desktop {
+      display: none;
+    }
+    &--mobile {
+      display: flex;
+    }
+
+    @media screen and (min-width: 768px) {
+      padding: 0 60px;
+      &--desktop {
+        display: flex;
+      }
+      &--mobile {
+        display: none;
+      }
+    }
+  }
+
+  &__slider-btn-prev,
+  &__slider-btn-next {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 4px;
+    border-radius: 4px;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    pointer-events: all;
+
+    &:focus {
+      outline: none;
+      border: none;
+    }
+  }
+
+  &__slide-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+
+    &--desktop {
+      display: none;
+    }
+    &--mobile {
+      display: block;
+    }
+    @media screen and (min-width: 768px) {
+      &--desktop {
+        display: block;
+      }
+      &--mobile {
+        display: none;
+      }
+    }
+  }
+
+  &__point-container {
+    position: absolute;
+    transform: translate(-50%, -50%);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+  }
+  &__point-dot {
+    display: block;
+    width: 8px;
+    height: 8px;
+    border-radius: 100%;
+  }
+  &__point-text {
+    font-family: var(--font-plex);
+    font-weight: 400;
+    font-size: 13px;
+    line-height: 130%;
+    letter-spacing: 0em;
+    text-align: center;
+  }
+
+  &__clicks-container {
+    grid-area: text;
+    width: 100%;
+    height: 100%;
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 25px;
+    @media screen and (min-width: 768px) {
+      gap: 40px;
+      padding: 160px 10px;
+    }
+  }
+
+  &__click-item {
+    font-family: var(--font-america);
+    font-weight: 700;
+    font-size: 23px;
+    line-height: 100%;
+    letter-spacing: 0em;
+    text-align: center;
+
+    cursor: pointer;
+    position: relative;
+    background-color: transparent;
+    border: none;
+    transition: color 0.3s ease;
+    &:focus {
+      outline: none;
+    }
+
+    &::before {
+      content: "";
+      display: block;
+      pointer-events: none;
+      position: absolute;
+      bottom: -3px;
+      height: 1px;
+      width: 100%;
+      opacity: 0;
+      transition: opacity 0.3s ease;
+    }
+  }
 }
